# mtrade

./: .gitignore  README.md  pyproject.toml
configs/: config.toml
docs/: ai_driven_development_okr.md  domestic_stock_quant_system.md  domestic_stock_quant_system_review_plan.md
examples/: event_driven_backtest.py  factor_research.py  fetch_history_data.py  portfolio_backtest.py
qtrade/core/: errors.py  log.py  types.py
qtrade/data/: provider.py  schema.py
qtrade/data/collectors/: akshare_provider.py
qtrade/data/storage/: parquet_storage.py
qtrade/data/validators/: quality.py
src/qtrade/: __init__.py
src/qtrade/backtest/: broker_sim.py  comparison.py  cost.py  daily_engine.py  event_engine.py  events.py
src/qtrade/core/: __init__.py  config.py  log.py
src/qtrade/data/: provider.py  schema.py
src/qtrade/data/collectors/: akshare_provider.py
src/qtrade/data/storage/: parquet_storage.py
src/qtrade/data/validators/: quality.py
src/qtrade/features/: pipeline.py
src/qtrade/features/factors/: base.py
src/qtrade/report/: performance.py
src/qtrade/research/: evaluation.py  universe.py
src/qtrade/risk/: engine.py
src/qtrade/strategy/: portfolio.py
tests/unit/: test_backtest.py  test_core.py  test_data.py  test_event_backtest.py  test_research.py
