[project]
name = "qtrade"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mori", email = "moridevelopers@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "structlog>=25.5.0",
]

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]
